--- a/Coaching website/index.html
+++ b/Coaching website/index.html
@@ -96,7 +96,7 @@
    </section>
                 <!-- testimonials -->
     <section class="testimonials">
-        <h1>What Our Student Says</h1>
+        <h1>What Our Students Say</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos iste sit corrupti provident numquam deserunt quaerat asperiores </p>
         <div class="row">
             <div class="testimonials-col">
